corrected with solutions LambdaUtilities